--- a/index.html
+++ b/index.html
@@ -1,1 +1,166 @@
-<!-- In this file you are going to write html code -->
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" text="text/css" href="./styles/main.css">
+
+    </head>
+
+    <body>
+        <header class="transparent_nav">
+            <nav class="nav_bar">
+                <img id="logo" src="./img/logo.png"> 
+               <ul id="nav_list" style="list-style-type: none;">
+                    <li class="nav_item"><a id="nav_item1">Our Story</a></li>
+                    <li class="nav_item"><a id="nav_item2">Products</a></li>
+                    <li class="nav_item"><a id="nav_item3">Journal</a></li>
+                    <li class="nav_item"><a id="nav_item4">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="cta">
+            <p id="cta_text">
+                Have a project in mind? We would love to hear from you!
+            </p>
+            <a id="cta_link">GET IN TOUCH WITH US</a>
+        </section>
+        <section class="services">
+            <h2 class="service_title">We are ARK Studio, We make awesome stuff.</h2>
+            <div class="separator">
+            <li class="separator_item" style="list-style-type: none;">  <img src="./img/separator.png"></li>
+            </div>
+            <div class="service_item" style="list-style-type: none;">    
+            <li class="service_item_1"> <img src="./img/s1.png"></li>
+            <li class="service_item_2"> <img src="./img/s2.png"></li>
+            <li class="service_item_3"> <img src="./img/s3.png"></li>
+            </div>
+            <div class="service_item">
+                <div class="desc">
+                <h1>slamco lebaries vellite</h1>
+                <p>porem Ipsum is simply dummy text
+                 of the printing and typesetting industry.</p>
+                </div>
+                <div class="desc">
+                 <h1>slamco lebaries vellite</h1>
+                 <p>porem Ipsum is simply dummy text
+                    of the printing and typesetting industry.</p>
+                </div>
+                <div class="desc">                  
+                      <h1>slamco lebaries velliete</h1>
+                    <p>porem Ipsum is simply dummy text
+                        of the printing and typesetting industry.</p>   
+                    </div>
+
+            </div>
+        </section>
+        
+        <section class="recent_work">
+            <img src="./img/w1.jpg" class="project">
+            <img src="./img/w2.jpg" class="project">
+            <img src="./img/w3.jpg" class="project">
+            <img src="./img/w4.jpg" class="project">
+            <img src="./img/w5.jpg" class="project">
+        </section>
+        <section id="testimonials_wrapper">
+            <h2 id="testimonial_title">Testimonials</h2>
+            <ul class="testimonial" style="list-style-type: none;">
+                <li id="testimonial_1">
+                    <div class="person_img">
+                        <img src="./img/client1.jpg">
+                    </div>
+                    <div class="person_name">
+                        <h2>John Doe/Manager</h2>
+                    </div>
+                    <div class="person_disc">
+                        Lorem Ipsum is simply dummy text
+                            of the printing and typesetting industry.
+                             Lorem Ipsum has been the industry's standard
+                              dummy text ever since the 1500s,
+                    </div>
+                </li>
+                <li id="testimonial_1">
+                    <div class="person_img">
+                        <img src="./img/client2.jpg">
+                    </div>
+                    <div class="person_name">
+                        <h2>John Doe/Manager</h2>
+                    </div>
+                    <div class="person_disc">
+                        Lorem Ipsum is simply dummy text
+                            of the printing and typesetting industry.
+                             Lorem Ipsum has been the industry's standard
+                              dummy text ever since the 1500s,
+                    </div>
+                </li>
+                <li class="testimonial_1">
+                    <div class="person_img">
+                        <img src="./img/client3.jpg">
+                    </div>
+                    <div class="person_name">
+                        <h2>John Doe/Manager</h2>
+                    </div>
+                    <div class="person_disc">
+                        Lorem Ipsum is simply dummy text
+                            of the printing and typesetting industry.
+                             Lorem Ipsum has been the industry's standard
+                              dummy text ever since the 1500s,
+                    </div>
+                </li>
+            </ul>
+        </section>
+      <section id="brand">
+        <img src="./img/client_logo.png">
+        <img src="./img/client_logo.png">
+        <img src="./img/client_logo.png">
+        <img src="./img/client_logo.png">
+        <img src="./img/client_logo.png">
+        <img src="./img/client_logo.png">
+      </section>
+        <footer class="footer">
+           <section id="quote">
+            <p >Have a project in mind? We would love to hear from you!</p>
+            <a href="#" id="getintouch">GET IN TOUCH WITH US</a>
+           </section>
+           <section class="footer_component">
+            <div class="footer_1">
+                <h1>Location</h1>
+                <p>
+                    3301 New Mexico Avenue<br>
+                    Washington, DC 20016<br>
+                    (202)537-0787<br>
+                </p>
+                <img src="./img/social.png">
+            </div>
+    
+            <div class="footer_1">
+                <h1>Company</h1>
+                <p>
+                    our story<br>
+                    Mission<br>
+                    Journal<br>
+                    Careers<br>
+                </p>
+            </div>
+            <div class="footer_1">
+                <h1>Support</h1>
+                <p>
+                    FAQ<br>
+                    Contact us<br>
+                    Policies<br>
+                </p>
+            </div>
+            <div class="footer_1">
+                <h1>ARK Studio</h1>
+                <p>
+                    Lorem ipsum dolor<br>
+                    sit, amet consectetur<br>
+                    adipisicing elit. Sequi vero<br>
+                </p>
+            </div>
+        </section>
+           <section class="rights">
+            2014 ARK Studio - All rights Reserved
+           </section>
+        </footer>
+
+    </body>
+</html>
